# PicoCalc-GB-Kaeru

./: .envrc  .gitignore  .gitmodules  .python-version  CMakeLists.txt  DevelopmentEnvironment.md  HardwareSpec.md  LICENSE  PROGRESS.md  README.md  SCRATCH.md  Spec.md  hw_config.c
compat/hardware/: rtc.h
emu/gb/: gb_core.c  gb_core.h
src/: main.c
src/audio/: audio_pwm.c  audio_pwm.h
src/input/: input_keyboard.c  input_keyboard.h
src/menu/: menu.c  menu.h
src/storage/: flash_meta.c  flash_meta.h  rom_flash.c  rom_flash.h  save_flash.c  save_flash.h  save_sram.c  save_sram.h  save_state.c  save_state.h  storage_sd.c  storage_sd.h
src/video/: font1.h  lgfx_config.hpp  video_lcd.c  video_lcd.h  video_lgfx.cpp
